<resources>
    <string name="app_name">Mis Carnes Parrilla</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="repetir_contraseña">Repetir Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="datos">Datos:</string>
    <string name="correo">Correo Elecrónico:</string>
    <string name="email">example@dominio.com</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombre">Usuario:</string>
    <string name="email2">Email:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
