<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arteaga.kevin.miscarnesparrilla.RegistroActivity"
    android:orientation="vertical"
    android:background="@color/miscarnes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:paddingTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datos"
            android:textSize="25dp"
            android:textColor="@color/amarillo"/>

        <EditText
            android:paddingTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:gravity="center_horizontal"
            android:textSize="22dp"
            android:textColorHint="@color/letras"
            android:textColor="@color/amarillo"
            android:theme="@style/CampoTextoNaranja"
            android:id="@+id/eUsuarioR"
            android:inputType="textPersonName"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contraseña"
            android:gravity="center_horizontal"
            android:textSize="22dp"
            android:textColorHint="@color/letras"
            android:textColor="@color/amarillo"
            android:theme="@style/CampoTextoNaranja"
            android:id="@+id/eContraseñaR"
            android:inputType="textPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repetir_contraseña"
            android:textSize="22dp"
            android:gravity="center_horizontal"
            android:textColorHint="@color/letras"
            android:textColor="@color/amarillo"
            android:theme="@style/CampoTextoNaranja"
            android:id="@+id/eContraseñaR2"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:textSize="25dp"
            android:textColor="@color/amarillo"/>

        <EditText
            android:paddingTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="22dp"
            android:gravity="center_horizontal"
            android:textColorHint="@color/letras"
            android:textColor="@color/amarillo"
            android:theme="@style/CampoTextoNaranja"
            android:id="@+id/eCorreo"
            android:inputType="textEmailAddress"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingLeft="80dp"
        android:paddingRight="80dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/aceptar"
            android:layout_gravity="center"
            android:textSize="27dp"
            android:gravity="center"
            android:singleLine="true"
            android:textColorHint="#2f2e2e"
            android:backgroundTint="@color/naranja"
            android:onClick="OnClickAceptar"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cancelar"
            android:layout_gravity="center"
            android:textSize="27dp"
            android:gravity="center"
            android:singleLine="true"
            android:textColorHint="#2f2e2e"
            android:backgroundTint="@color/naranja"
            android:onClick="OnClickCancelar"/>
    </LinearLayout>


</LinearLayout>
