<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arteaga.kevin.miscarnesparrilla.LogginActivity"
    android:orientation="vertical"
    android:background="@color/miscarnes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo_color"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.45"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:hint="@string/usuario"
            android:textSize="24dp"
            android:gravity="center_horizontal"
            android:textColorHint="@color/letras"
            android:textColor="@color/amarillo"
            android:theme="@style/CampoTextoNaranja"
            android:id="@+id/eUsuario"
            android:inputType="textPersonName"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:hint="@string/contraseña"
            android:textSize="24dp"
            android:gravity="center_horizontal"
            android:textColorHint="@color/letras"
            android:textColor="@color/amarillo"
            android:theme="@style/CampoTextoNaranja"
            android:id="@+id/eContraseña"
            android:inputType="textPassword"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="80dp"
        android:paddingRight="80dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingresar"
            android:textSize="27dp"
            android:gravity="center"
            android:singleLine="true"
            android:textColorHint="#2f2e2e"
            android:backgroundTint="@color/naranja"
            android:onClick="OnClickIngresar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/registrarse"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="16dp"
            android:onClick="OnClickText"
            android:textColor="@color/amarillo" />
    </LinearLayout>

</LinearLayout>
